--- a/libavcodec/Makefile
+++ b/libavcodec/Makefile
@@ -58,6 +58,7 @@ OBJS = ac3_parser.o                                                     \
        utils.o                                                          \
        vorbis_parser.o                                                  \
        xiph.o                                                           \
+       mpeghdec.o                                                       \
 
 # subsystems
 OBJS-$(CONFIG_AANDCTTABLES)            += aandcttab.o
